--- a/develop/css/styles.css
+++ b/develop/css/styles.css
@@ -77,11 +77,11 @@ p {
   font-weight: 400;
 }
 /* make images easier to work with */
-/* img,
+img,
 picture {
   max-width: 100%;
   display: block;
-} */
+}
 /* make form elements easier to work with */
 input,
 button,
@@ -123,6 +123,14 @@ blockquote {
   );
 
   line-height: 1.5rem;
+  max-width: 33ch;
+}
+
+blockquote::before {
+  content: open-quote;
+}
+blockquote::after {
+  content: close-quote;
 }
 
 figcaption {
@@ -231,6 +239,84 @@ ul {
 **     BLOCKS
 --------------------*/
 /** CAROUSEL */
+.carousel {
+}
+
+/** BUTTONS */
+.carousel-controls {
+}
+
+/** GALLERY */
+.carousel__gallery {
+  display: flex;
+  justify-content: center;
+}
+
+/* ul */
+.gallery {
+}
+
+/** CARD */
+.card {
+}
+
+.card figure {
+  display: grid;
+  grid-template-columns: minmax(100px, 320px);
+  grid-template-rows: max-content 57px max-content 19px max-content;
+  justify-items: center;
+}
+
+.card__image {
+  grid-column: 1/2;
+  grid-row: 1/2;
+}
+
+.card__text {
+  grid-column: 1/2;
+  grid-row: 3/4;
+
+  text-align: center;
+}
+
+.card__name {
+  grid-column: 1/2;
+  grid-row: 5/6;
+}
+
+.card__title {
+  display: block;
+}
+
+@media only screen and (min-width: 48em) {
+  .card figure {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(2, max-content);
+    align-items: center;
+    justify-items: start;
+  }
+
+  .card__image {
+    grid-column: 2/3;
+    grid-row: 1/2;
+  }
+
+  .card__text {
+    grid-column: 1/3;
+    grid-row: 1/2;
+
+    text-align: start;
+  }
+
+  .card__name {
+    grid-column: 1/2;
+    grid-row: 2/3;
+  }
+
+  .card__title {
+    display: inline;
+  }
+}
 
 /**------------------- 
 **    EXCEPTIONS
